--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,6 +47,9 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.12.1"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "react-router-dom": "^6.12.1",
+    "tailwindcss": "^3.4.10"
   }
 }
